# daily-novels-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  exports.sh.example  go.mod  main.py  pyproject.toml
.circleci/: config.yml
app/: enums.py  main.py
app/core/: models.py
app/core/database/: data_insert.py  schemas.py
app/events/: models.py
app/events/consumers/: create_queues.py  queue_processor.go
app/events/database/: data_fetcher.py  data_insert.py
app/events/publishers/: create_bindings.py  create_exchanges.py  exchanges_enum.py  publish_messages.py
app/events/routers/: exceptions.py
app/events/routers/internal/: README.md  consumers.py  publishers.py
app/events/routers/v1/: chapter_read.py  novel.py
app/infra/: connections.py  secrets.py
app/utils/: mocks.py
terraform/: rfls
terraform/akeyless/: .terraform.lock.hcl  main.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
terraform/docker/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
terraform/rabbitmq/: .terraform.lock.hcl  main.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
